@@ -5,7 +5,8 @@ class User extends MY_Controller {
 	public function index()
 	{
 		// CRUD table
-		$crud = $this->enable_crud('users');
+		$this->load->helper('crud');
+		$crud = generate_crud('users');
 		$crud->unset_fields('activation_code', 'forgot_password_code', 'forgot_password_time', 'created_at');
 		$crud->columns('role', 'username', 'email', 'first_name', 'last_name', 'active', 'created_at');
 
